Fix the textarea's visibility

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,8 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
+textarea {
+  width: 100%;
+  height: 200px; /* Percentage doesn't seem to work here */
+  padding: 3px;
+}
